fix: docsite search bar a11y (#3653)
* fix: docsite search bar a11y

Changed the search bar from a SearchInput to a Pressble because

1. the onClick handler on input does not get triggered when the startIcon is clicked;
2.  we cannot use onFocus to trigger kbar modal like the old site does because the modal should only show up when when explicitly called for;
3. the search input does not take any user input, so a button makes more sense semantically.

* fix: navbar/sidebar links

1. updated the link in navbar to scale on press
2. updated the spacing in mobile sidebar linkss

* fix: layout shift
Fixed layout shift on platform switch by ensure the toc has constant width.

* remove redundant list-style prop
use IconButton for navbar Kbar trigger for all screen sizes

* remove extra aria-label

--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -16,7 +16,7 @@
   --ifm-code-font-size: 95%;
   --ifm-hr-height: unset;
   --ifm-navbar-sidebar-width: 240px;
-  --ifm-navbar-height: 74px;
+  --ifm-navbar-height: 72px;
   --ifm-link-hover-decoration: none;
   --ifm-list-item-margin: unset;
   --docusaurus-highlighted-code-line-bg: #fff;
@@ -26,12 +26,6 @@
   --zIndex-portal: 100001;
 
   --table-of-content-width: 230px;
-}
-
-@media screen and (max-width: 1280px) {
-  :root {
-    --ifm-navbar-height: 72px;
-  }
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -69,10 +63,6 @@ h4,
 h5,
 h6 {
   margin: 0;
-}
-
-ul {
-  list-style: none;
 }
 
 .navbar {
